--- a/TimeSheet-Web/src/app/modules/attendance-supervisor/attendance-supervisor.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance-supervisor/attendance-supervisor.component.html
@@ -1,80 +1,67 @@
 <div class="page-main">
-    <div>
-        <div style="text-align: right;">
+    <div class="row headTilteDialog">
+        <h3 mat-dialog-title>Time Sheet</h3>
+      </div>
+    <div class="row">
+        <div class="col-6">
+          <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
+        </div>
+        <div class="col-6" style="text-align: right;">
             <button mat-raised-button class="btn-submit">
                 <mat-icon>library_books</mat-icon>
                 View History
-            </button>&nbsp;
-            <button mat-raised-button [routerLink]="['./user-profile']" class="btn-submit">
-                <mat-icon >supervisor_account</mat-icon>
+              </button>&nbsp;
+              <button mat-raised-button class="btn-submit" (click)="onDialogAddAattendance()">
+                <mat-icon>assessment</mat-icon>
+                Add Attendance List
+              </button>&nbsp;
+              <button mat-raised-button [routerLink]="['./user-profile']" class="btn-submit">
+                <mat-icon>supervisor_account</mat-icon>
                 Profile
-            </button>&nbsp;
-            <button mat-raised-button class="btn-submit" (click)="onDialogAssign()">
-                <mat-icon>assignment_return</mat-icon>
-                Add Assign Project 
-            </button>&nbsp;
-            <button mat-raised-button class="btn-submit" (click)="onDialogAddAattendance()">
-                <mat-icon> assessment</mat-icon>
-                Add Attendance
-            </button>
-        </div> <br>
-        <div style="text-align: right;">
-            <button mat-raised-button class="btn-submit" (click)="back()">
-                <mat-icon>work_outline</mat-icon>
-                Back
-            </button>
+              </button>&nbsp;
         </div>
-        <div class="row mt-3">
-            <div class="col-sm-12 col-md-12">
-                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
-                    <ng-container matColumnDef="date">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-                    </ng-container>
-
-
-                    <ng-container matColumnDef="project">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Project </th>
-                        <td mat-cell *matCellDef="let element"> {{element.project}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="site">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Site </th>
-                        <td mat-cell *matCellDef="let element"> {{element.site}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="task">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
-                        <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="timeIn">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Time in </th>
-                        <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="timeOut">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Time out </th>
-                        <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
-                    </ng-container>
-                    <!-- <ng-container matColumnDef="Action">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-                    <td mat-cell *matCellDef="let element">
-                        <a class="mr-2" (click)="openDialogEditAccount(element)" style="cursor: pointer;">
-                            <mat-icon class="icon-action">edit</mat-icon>
-                        </a>
-                        &nbsp; &nbsp;
-                        <a (click)="openDialogDeleteAccount(element.id.customerNo,element.id.accountNo)" style="cursor: pointer;">
-                            <mat-icon class="icon-action">delete_forever</mat-icon>
-                        </a>
-
-                    </td>
-                </ng-container> -->
-
-
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-                <!-- <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator> -->
-            </div>
-        </div>
+      </div><br>
+      
+      <div style="text-align: right;">
+        <button mat-raised-button class="btn-submit" (click)="back()">
+            <mat-icon>work_outline</mat-icon>
+            Back
+        </button>
+      </div><br>
+    
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+        </ng-container>  
+    
+        <ng-container matColumnDef="project">
+          <th mat-header-cell *matHeaderCellDef> Project </th>
+          <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="site">
+          <th mat-header-cell *matHeaderCellDef> Site </th>
+          <td mat-cell *matCellDef="let element"> {{element.site}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef> Task </th>
+          <td mat-cell *matCellDef="let element"> {{element.task}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="timeIn">
+          <th mat-header-cell *matHeaderCellDef> Time-In </th>
+          <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="timeOut">
+          <th mat-header-cell *matHeaderCellDef> Time-Out </th>
+          <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
-</div>
