--- a/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
@@ -2,60 +2,63 @@
   <h2 mat-dialog-title>Add User Project</h2>
 </div><br>
 
-
-<div class="row mt-3">
-  <div class="col-2 mt-2" style="text-align: right;">
-    <mat-label>User Code</mat-label>
-  </div>
-  <!-- <div class="col-4">
+<form [formGroup] ="createUserProject" (ngSubmit)="onSubmit()">
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label>User Code</mat-label>
+    </div>
+    <!-- <div class="col-4">
         <input class="form-control" formControlName="userCode" >
   
       </div> -->
-  <div class="col-4">
-    <mat-select class="form-control" formControlName="userCodeEmployee"
-      [ngClass]="{'is-invalid': submitted && f.userCodeEmployee.errors}">
-      <mat-option *ngFor="let userCodeEmployee of userCodeEmployees " [value]="userCodeEmployee.type">
-        {{userCodeEmployee.name}}
-      </mat-option>
+    <div class="col-4">
+      <mat-select class="form-control" formControlName="userCode" name="userCode">
+        <mat-option *ngFor="let data of dataUserProject " [value]="data.userCode">
+            {{data.userCode}}
+        </mat-option>
     </mat-select>
-  </div>
-  
-  <div class="col-2 mt-2" style="text-align: right;">
-    <mat-label> Project </mat-label>
-  </div>
-  <div class="col-4">
-    <input class="form-control" formControlName="site">
+    </div>
 
-  </div>
-</div>
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Project Code</mat-label>
+    </div>
+    <div class="col-4">
+      <input class="form-control" formControlName="projectCode">
 
-<div class="row mt-3">
-  <div class="col-2 mt-2" style="text-align: right;">
-    <mat-label> Task </mat-label>
-  </div>
-  <div class="col-10">
-    <textarea class="form-control" formControlName="task"></textarea>
-
-  </div>
-</div>
-
-<div class="row mt-3">
-  <div class="col-2 mt-2" style="text-align: right;">
-    <mat-label> Date </mat-label>
-  </div>
-  <div class="input-group" class="col-4">
-    <input formControlName="startDate" class="form-control" [matDatepicker]="pickerStart">
-    <div class="input-group-append">
-      <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-      <mat-datepicker #pickerStart></mat-datepicker>
     </div>
   </div>
-</div>
 
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Task </mat-label>
+    </div>
+    <div class="col-10">
+      <textarea class="form-control" formControlName="task"></textarea>
 
+    </div>
+  </div>
 
+  <div class="row mt-3">
+    <div class="col-2 mt-2" style="text-align: right;">
+      <mat-label> Date </mat-label>
+    </div>
+    <div class="input-group" class="col-4">
+      <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
+      <div class="input-group-append">
+        <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+        <mat-datepicker #pickerStart></mat-datepicker>
+      </div>
+    </div>
+  </div>
 
-<div mat-dialog-actions class="mt-3" style="float: right;">
-  <button mat-raised-button type="submit" class="btn-submit">Save</button>
-  <a mat-raised-button class="btn-cancle" (click)="closeDialog(false)">Cancel</a>
-</div>
+  <div mat-dialog-actions class="mt-3" style="float: right;">
+    <button mat-raised-button type="submit" class="btn-submit">Save</button>
+    <a mat-raised-button class="btn-cancle" (click)="closeDialog(false)">Cancel</a>
+  </div>
+</form>
+
+<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+[showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+</swal>
+<swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="closeDialog(true)" [width]="480">
+</swal>
