--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,61 +1,63 @@
+<p>attendance works!</p>
 <div class="page-main">
 
-  <div class="row">
-    <div class="col-12">
-      <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
+    <div class="row">
+      <div class="col-12">
+        <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-12" style="text-align: right;">
+        <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
+          <mat-icon>library_books</mat-icon>
+          View History
+        </button>&nbsp;
+        <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
+          <mat-icon>assessment</mat-icon>
+          Add Attendance List
+        </button>
+      </div>
+    </div>&nbsp;
+  
+    <div class="row mt-3">
+      <div class="col-sm-12 col-md-12">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="project">
+            <th mat-header-cell *matHeaderCellDef> Project </th>
+            <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="site">
+            <th mat-header-cell *matHeaderCellDef> Site </th>
+            <td mat-cell *matCellDef="let element"> {{element.site}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="task">
+            <th mat-header-cell *matHeaderCellDef> Task </th>
+            <td mat-cell *matCellDef="let element"> {{element.task}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="timeIn">
+            <th mat-header-cell *matHeaderCellDef> Time-In </th>
+            <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="timeOut">
+            <th mat-header-cell *matHeaderCellDef> Time-Out </th>
+            <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-12" style="text-align: right;">
-      <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
-        <mat-icon>library_books</mat-icon>
-        View History
-      </button>&nbsp;
-      <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
-        <mat-icon>assessment</mat-icon>
-        Add Attendance List
-      </button>
-    </div>
-  </div>&nbsp;
-
-  <div class="row mt-3">
-    <div class="col-sm-12 col-md-12">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="project">
-          <th mat-header-cell *matHeaderCellDef> Project </th>
-          <td mat-cell *matCellDef="let element"> {{element.project}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="site">
-          <th mat-header-cell *matHeaderCellDef> Site </th>
-          <td mat-cell *matCellDef="let element"> {{element.site}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="task">
-          <th mat-header-cell *matHeaderCellDef> Task </th>
-          <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="timeIn">
-          <th mat-header-cell *matHeaderCellDef> Time-In </th>
-          <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="timeOut">
-          <th mat-header-cell *matHeaderCellDef> Time-Out </th>
-          <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-  </div>
-</div>
+  
