--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,4 +1,3 @@
-<p>attendance works!</p>
 <div class="page-main">
 
     <div class="row">
@@ -31,7 +30,7 @@
   
           <ng-container matColumnDef="project">
             <th mat-header-cell *matHeaderCellDef> Project </th>
-            <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.project.projectName}} </td>
           </ng-container>
   
           <ng-container matColumnDef="site">
