--- a/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
@@ -9,35 +9,14 @@
             <mat-label> First Name </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control"  formControlName="firstName" disabled
-            [ngClass]="{'is-invalid': submitted && f.firstName.errors}">
-            <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-              <div *ngIf="f.firstName.errors.required" class="text-danger help-block">
-                {{'First Name' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-              <div *ngIf="f.firstName.errors.whitespace" class="text-danger help-block">
-                {{'First Name' | mandatoryfield}}
-              </div>
-            </div>  
+            <input class="form-control"  formControlName="firstName">
           </div>
           <div class="col-2 mt-2" style="text-align: right;">
             <mat-label> Last Name </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control"  formControlName="lastName" disabled
-            [ngClass]="{'is-invalid': submitted && f.lastName.errors}">
-            <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-              <div *ngIf="f.lastName.errors.required" class="text-danger help-block">
-                {{'Last Name' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-              <div *ngIf="f.lastName.errors.whitespace" class="text-danger help-block">
-                {{'Last Name' | mandatoryfield}}
-              </div>
-            </div>  
+            <input class="form-control"  formControlName="lastName">
+            
           </div>
         </div>
         
@@ -58,18 +37,7 @@
             <mat-label> Age </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control" formControlName="age"
-            [ngClass]="{'is-invalid': submitted && f.age.errors}">            
-            <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-              <div *ngIf="f.age.errors.required" class="text-danger help-block">
-                {{'Age' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
-              <div *ngIf="f.age.errors.whitespace" class="text-danger help-block">
-                {{'Age' | mandatoryfield}}
-              </div>
-            </div>  
+            <input class="form-control" formControlName="age">   
           </div>
         </div>
   
@@ -78,35 +46,14 @@
             <mat-label> Address </mat-label>
           </div>
           <div class="col-4">
-            <textarea class="form-control" formControlName="address"
-            [ngClass]="{'is-invalid': submitted && f.address.errors}"></textarea>
-            <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-              <div *ngIf="f.age.errors.required" class="text-danger help-block">
-                {{'Address' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-              <div *ngIf="f.address.errors.whitespace" class="text-danger help-block">
-                {{'Address' | mandatoryfield}}
-              </div>
-            </div>  
+            <textarea class="form-control" formControlName="address"></textarea>
           </div>
           <div class="col-2 mt-2" style="text-align: right;">
             <mat-label> Position </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control" formControlName="position" disabled
-            [ngClass]="{'is-invalid': submitted && f.position.errors}">
-            <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-              <div *ngIf="f.position.errors.required" class="text-danger help-block">
-                {{'Position' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
-              <div *ngIf="f.position.errors.whitespace" class="text-danger help-block">
-                {{'Position' | mandatoryfield}}
-              </div>
-            </div>           
+            <input class="form-control" formControlName="position">
+    
           </div>
         </div>
   
@@ -115,18 +62,7 @@
             <mat-label> Site </mat-label>
           </div>
           <div class="col-4">
-            <input class="form-control" formControlName="site" disabled
-            [ngClass]="{'is-invalid': submitted && f.site.errors}">
-            <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-              <div *ngIf="f.site.errors.required" class="text-danger help-block">
-                {{'Site' | mandatoryfield}}
-              </div>
-            </div>
-            <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-              <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
-                {{'Site' | mandatoryfield}}
-              </div>
-            </div>        
+            <input class="form-control" formControlName="site"> 
           </div>
         </div>
       <div mat-dialog-actions  class="mt-3" style="float: right;">
