--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -4,22 +4,43 @@
   <div class="col-12">
     <div> <a style="font-size: 1.75rem;">User Profile</a></div>
   </div>
-  <form [formGroup]="createProfile">
+  <form [formGroup]="createProfile" (ngSubmit)="onSubmit()">
   
       <div class="row mt-3">
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> First Name </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control"  formControlName="firstName" disabled>
-
+          <input class="form-control"  formControlName="firstName"
+          [ngClass]="{'is-invalid': submitted && f.firstName.errors}">
+          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+            <div *ngIf="f.firstName.errors.required" class="text-danger help-block">
+              {{'First Name' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+            <div *ngIf="f.firstName.errors.whitespace" class="text-danger help-block">
+              {{'First Name' | mandatoryfield}}
+            </div>
+          </div>  
         </div>
+
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Last Name </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control"  formControlName="lastName" disabled>
-
+          <input class="form-control"  formControlName="lastName"
+          [ngClass]="{'is-invalid': submitted && f.lastName.errors}">
+          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+            <div *ngIf="f.lastName.errors.required" class="text-danger help-block">
+              {{'Last Name' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+            <div *ngIf="f.lastName.errors.whitespace" class="text-danger help-block">
+              {{'Last Name' | mandatoryfield}}
+            </div>
+          </div>  
         </div>
       </div>
       
@@ -28,16 +49,30 @@
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Birth Of Date </mat-label>
         </div>
-        <div class="col-4">       
-            <input class="form-control" formControlName="birthday" disabled>               
-        </div>
+        <div class="input-group" class="col-4">
+          <input formControlName="birthday" class="form-control" [matDatepicker]="pickerStart">
+          <div class="input-group-append">
+              <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+              <mat-datepicker #pickerStart></mat-datepicker>
+          </div>
+      </div>
 
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Age </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="age" disabled>
-
+          <input class="form-control" formControlName="age"
+          [ngClass]="{'is-invalid': submitted && f.age.errors}">
+          <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
+            <div *ngIf="f.age.errors.required" class="text-danger help-block">
+              {{'Age' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.age.errors" class="invalid-feedback">
+            <div *ngIf="f.age.errors.whitespace" class="text-danger help-block">
+              {{'Age' | mandatoryfield}}
+            </div>
+          </div> 
         </div>
       </div>
 
@@ -46,14 +81,35 @@
           <mat-label> Address </mat-label>
         </div>
         <div class="col-4">
-          <textarea class="form-control" formControlName="address" disabled></textarea>
-
+          <textarea class="form-control" formControlName="address"
+          [ngClass]="{'is-invalid': submitted && f.address.errors}"></textarea>
+          <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
+            <div *ngIf="f.address.errors.required" class="text-danger help-block">
+              {{'Address' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
+            <div *ngIf="f.address.errors.whitespace" class="text-danger help-block">
+              {{'Address' | mandatoryfield}}
+            </div>
+          </div> 
         </div>
         <div class="col-2 mt-2" style="text-align: right;">
           <mat-label> Position </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="position" disabled>         
+          <input class="form-control" formControlName="position"
+          [ngClass]="{'is-invalid': submitted && f.position.errors}">
+          <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
+            <div *ngIf="f.position.errors.required" class="text-danger help-block">
+              {{'Position' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.position.errors" class="invalid-feedback">
+            <div *ngIf="f.position.errors.whitespace" class="text-danger help-block">
+              {{'Position' | mandatoryfield}}
+            </div>
+          </div>          
         </div>
       </div>
 
@@ -62,17 +118,30 @@
           <mat-label> Site </mat-label>
         </div>
         <div class="col-4">
-          <input class="form-control" formControlName="site" disabled>
-
+          <input class="form-control" formControlName="site"
+          [ngClass]="{'is-invalid': submitted && f.site.errors}">
+          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+            <div *ngIf="f.site.errors.required" class="text-danger help-block">
+              {{'Site' | mandatoryfield}}
+            </div>
+          </div>
+          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
+            <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
+              {{'Site' | mandatoryfield}}
+            </div>
+          </div> 
         </div>
       </div>
     <div mat-dialog-actions  class="mt-3" style="float: right;">
-      <button mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataProfile)">Edit</button>&nbsp;      
+      <button mat-raised-button class="btn-submit" type="submit">Save</button>&nbsp;    
+      <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataUser)">Edit</a>      
     </div>    
   </form>
-
 </div>
 
-
-
+<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+[showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+</swal>
+<swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getUser()" [width]="480">
+</swal>
 
