--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -115,7 +115,7 @@
     </div>
 
     <div mat-dialog-actions class="mt-3" style="float: right;">
-      <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataUser)">
+      <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataProfile)">
         <mat-icon class="card-button">edit</mat-icon> Edit
       </a>
     </div>
